--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   provider: ^4.0.4
   rxdart: ^0.23.1
   charts_flutter: ^0.9.0
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
