--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   flutter_echarts: ^1.3.1
   cached_network_image: ^2.0.0-rc
   url_launcher: ^5.4.2
-
+  timeago: ^2.0.26
 
 dev_dependencies:
   flutter_test:
