--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cached_network_image: ^2.0.0-rc
   url_launcher: ^5.4.2
   timeago: ^2.0.26
+  webview_flutter: ^0.3.19+9
 
 dev_dependencies:
   flutter_test:
