--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   webview_flutter: ^0.3.19+9
   firebase_messaging: ^6.0.13
   firebase_admob: ^0.9.3+1
-#  device_id: ^0.2.0
+  connectivity: ^0.4.8+2
 
 dev_dependencies:
   flutter_test:
